<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_test</name>
  <version>0.0.0</version>
  <description>node for libcamera supported cameras (V4L2, Raspberry Pi Camera Modules)</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libcamera</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
